# Rust-Fasterwhisper-Metal

./: .gitignore  APPLE_SILICON_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_READY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  demo.sh  demo_medium_model.sh  requirements.txt  setup.sh  setup_medium_model.sh  test_results.md
.github/instructions/: Instructions.instructions.md
.github/prompts/: agent-webapp.prompt.md  auto-debug.prompt.md  prompt1.prompt.md  python-linking.prompt.md
.github/workflows/: ci.yml  release.yml
docs/: python-linking-setup.md
scripts/: build.sh  setup_python_env.sh
src/: benchmark.rs  error.rs  lib.rs  main.rs  transcriber.rs  types.rs
tests/: integration_tests.rs
