[package]
name = "rust-whisper-app"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rayon = "1.7"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
